--- a/index.html
+++ b/index.html
@@ -253,15 +253,15 @@
         </section>
         <section class="life">
             <div class="container">
-                <h2 class="life__title"></h2>
+                <h2 class="life__title">Live a life like you wouldn’t imagine, experience a life you wouldn’t expect.</h2>
                 <div class="video-container video-container2">
                     <video id="myVideo" preload="metadata">
                         <source src="#" type="video/mp4">
                     </video>
 
                     <button id="playButton" class="video-container__play-button">
-                        <div class="video-container__circle2">
-                            <svg class="video-container__svg2" width="21px" height="26px">
+                        <div class="video-container2__circle2">
+                            <svg class="video-container2__svg2" width="16px" height="20px">
                                 <use href="./images/symboldefs.svg#play"></use>
                             </svg>
                         </div>
@@ -269,7 +269,7 @@
                 </div>
                 <ul class="lifelist">
                     <li class="lifelist__item">
-                        <picture>
+                        <picture class="lifelist__picture">
                             <source srcset="./images/country-td-1x.jpg    1x,
                                 ./images/country-td-2x.jpg    2x" media="(min-width: 768px)">
                             <source srcset="./images/country-m-1x.jpg    1x,
@@ -282,7 +282,7 @@
                             Phasellus dapibus mauris in lectus tempus.</p>
                     </li>
                     <li class="lifelist__item">
-                        <picture>
+                        <picture class="lifelist__picture">
                             <source srcset="./images/city-td-1x.jpg    1x,
                                 ./images/city-td-2x.jpg    2x" media="(min-width: 768px)">
                             <source srcset="./images/city-m-1x.jpg    1x,
@@ -303,7 +303,7 @@
                 <p class="gallery__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus
                     dapibus mauris in lectus tempus, eget tincidunt.</p>
                 <ul class="gallery-list">
-                    <li class="gallery-list__item">
+                    <li class="gallery-list__item a">
                         <picture>
                             <source srcset="./images/gallery-01-td-1x.jpg    1x,
                                 ./images/gallery-01-td-2x.jpg    2x" media="(min-width: 768px)">
@@ -312,7 +312,7 @@
                             <img src="./images/gallery-01-m-2x.jpg" alt="gallery-01">
                         </picture>
                     </li>
-                    <li class="gallery-list__item">
+                    <li class="gallery-list__item b">
                         <picture>
                             <source srcset="./images/gallery-02-td-1x.jpg    1x,
                                 ./images/gallery-02-td-2x.jpg    2x" media="(min-width: 768px)">
@@ -321,7 +321,7 @@
                             <img src="./images/gallery-02-m-2x.jpg" alt="gallery-02">
                         </picture>
                     </li>
-                    <li class="gallery-list__item">
+                    <li class="gallery-list__item c">
                         <picture>
                             <source srcset="./images/gallery-03-td-1x.jpg    1x,
                                 ./images/gallery-03-td-2x.jpg    2x" media="(min-width: 768px)">
@@ -330,7 +330,7 @@
                             <img src="./images/gallery-03-m-2x.jpg" alt="gallery-03">
                         </picture>
                     </li>
-                    <li class="gallery-list__item">
+                    <li class="gallery-list__item d">
                         <picture>
                             <source srcset="./images/gallery-04-td-1x.jpg    1x,
                                 ./images/gallery-04-td-2x.jpg    2x" media="(min-width: 768px)">
@@ -339,7 +339,7 @@
                             <img src="./images/gallery-04-m-2x.jpg" alt="gallery-04">
                         </picture>
                     </li>
-                    <li class="gallery-list__item">
+                    <li class="gallery-list__item e">
                         <picture>
                             <source srcset="./images/gallery-05-td-1x.jpg    1x,
                                 ./images/gallery-05-td-2x.jpg    2x" media="(min-width: 768px)">
@@ -348,7 +348,7 @@
                             <img src="./images/gallery-05-m-2x.jpg" alt="gallery-05">
                         </picture>
                     </li>
-                    <li class="gallery-list__item">
+                    <li class="gallery-list__item f">
                         <picture>
                             <source srcset="./images/gallery-06-td-1x.jpg    1x,
                                 ./images/gallery-06-td-2x.jpg    2x" media="(min-width: 768px)">
