--- a/index.html
+++ b/index.html
@@ -299,10 +299,12 @@
                                 ./images/country-m-2x.jpg    2x" media="(min-width: 375px)">
                             <img src="./images/country-m-2x.jpg" alt="country">
                         </picture>
-                        <h3 class="lifelist__title">In The Country</h3>
-                        <p class="lifelist__description">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit.
-                            Phasellus dapibus mauris in lectus tempus.</p>
+                        <div class="lifelist__content">
+                            <h3 class="lifelist__title">In The Country</h3>
+                            <p class="lifelist__description">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit.
+                                Phasellus dapibus mauris in lectus tempus.</p>
+                        </div>
                     </li>
                     <li class="lifelist__item">
                         <picture class="lifelist__picture">
@@ -312,10 +314,12 @@
                                 ./images/city-m-2x.jpg    2x" media="(min-width: 375px)">
                             <img src="./images/city-m-2x.jpg" alt="city">
                         </picture>
-                        <h3 class="lifelist__title">In The City</h3>
-                        <p class="lifelist__description">Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit.
-                            Phasellus dapibus mauris in lectus tempus.</p>
+                        <div class="lifelist__content">
+                            <h3 class="lifelist__title">In The City</h3>
+                            <p class="lifelist__description">Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit.
+                                Phasellus dapibus mauris in lectus tempus.</p>
+                        </div>
                     </li>
                 </ul>
             </div>
