--- a/index.html
+++ b/index.html
@@ -403,22 +403,27 @@
                     <li class="getting-list__item">
                         <p class="getting-list__number">2</p>
                         <h3 class="getting-list__title">Choosing your hotel</h3>
-                        <p class="getting-list__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        <p class="getting-list__description getting-list__description--margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                             Phasellus dapibus mauris in lectus tempus, eget tincidunt lacus varius. Sed euismod orci
                             dictum faucibus malesuada. Praesent sed eros tincidunt, viverra neque auctor, lobortis enim.
                         </p>
                         <button class="getting-list__button">Show more</button>
-                        <picture class="getting-list__picture">
-                            <source srcset="./images/travelling-td-1x.jpg    1x,
+                        <div class="getting-list__content2">
+                            <picture class="getting-list__picture">
+                                <source srcset="./images/travelling-td-1x.jpg    1x,
                                 ./images/travelling-td-2x.jpg    2x" media="(min-width: 768px)">
-                            <source srcset="./images/travelling-m-1x.jpg    1x,
+                                <source srcset="./images/travelling-m-1x.jpg    1x,
                                 ./images/travelling-m-2x.jpg    2x" media="(min-width: 375px)">
-                            <img src="./images/travelling-m-2x.jpg" alt="travelling">
-                        </picture>
-                        <h3 class="getting-list__title">Travelling there</h3>
-                        <p class="getting-list__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Phasellus dapibus mauris in lectus tempus, eget tincidunt. </p>
-                        <button class="getting-list__button">Show more</button>
+                                <img src="./images/travelling-m-2x.jpg" alt="travelling">
+                            </picture>
+                            <div class="getting-list__text-content2">
+                                <h3 class="getting-list__title2">Travelling there</h3>
+                                <p class="getting-list__description">Lorem ipsum dolor sit amet, consectetur adipiscing
+                                    elit.
+                                    Phasellus dapibus mauris in lectus tempus, eget tincidunt. </p>
+                                <button class="getting-list__button">Show more</button>
+                            </div>
+                        </div>
                     </li>
                     <li class="getting-list__item">
                         <p class="getting-list__number">3</p>
